# minifi-native-rs-example-extension

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs
src/processors/: mod.rs  simple_log_processor.rs  simple_source_processor.rs
src/processors/simple_log_processor/: tests.rs
src/processors/simple_source_processor/: tests.rs
